# DNDBot

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
characters/: durgin_ironbeard.yaml  mira_ashveil.yaml
docs/: README.md  agents.md  character_creation.md  cli.md  combat.md  dice.md  extending.md  items.md  rests.md
src/dnd_bot/: __init__.py
src/dnd_bot/agents/: __init__.py  class_tools.py  llm.py  player.py  prompts.py  state.py  tools.py
src/dnd_bot/character/: __init__.py  abilities.py  background.py  barbarian.py  base.py  character.py  classes.py  conditions.py  exhaustion.py  fighter.py  monk.py  resources.py  rogue.py  skills.py  species.py  storage.py  subclasses.py  types.py
src/dnd_bot/cli/: display.py  dm_parser.py  game.py
src/dnd_bot/data/: __init__.py  loader.py  species.yaml
src/dnd_bot/data/classes/: barbarian.yaml  fighter.yaml  monk.yaml  rogue.yaml
src/dnd_bot/data/items/: ammunition.yaml  armor.yaml  consumables.yaml  shields.yaml  weapons.yaml
src/dnd_bot/dice/: __init__.py  dice.py
src/dnd_bot/items/: __init__.py  armor.py  base.py  consumables.py  weapons.py
tests/: __init__.py  test_agent_graph.py  test_agent_llm.py  test_agent_prompts.py  test_agent_summarisation.py  test_agent_tools.py  test_armor_class.py  test_character.py  test_class_abilities.py  test_class_features.py  test_cli_display.py  test_cli_game.py  test_conditions.py  test_death_saves.py  test_dice.py  test_dm_parser.py  test_exhaustion.py  test_items.py  test_resources.py  test_rests.py  test_storage.py  test_subclasses.py
(+4 files in other folders)
